# cpp_algorithm

./: .gitignore  CMakeLists.txt  README.md  _design.md
src/: _main.cpp  all.hpp  any.hpp  arithmetic.hpp  catenate.hpp  common.hpp  drop.hpp  equal.hpp  filter.hpp  functional.cpp  functional.hpp  functional_dispatch.hpp  functional_tags.hpp  functional_xpr.hpp  gather.hpp  grade.hpp  iota.hpp  main.cpp  map.hpp  none.hpp  rank.hpp  reduce.hpp  repeat.hpp  reverse.hpp  rotate.hpp  scatter.hpp  size.hpp  take.hpp  zip.hpp
src/io/: print.hpp  vector_stream.hpp
src/meta/: _meta.md  bind.hpp  datatype_aliases.hpp  expression.hpp  global_datatypes.hpp  meta.md  result.hpp  result_factory.hpp
src/naive/: _naive.md  arithmetic.hpp  catenate.hpp  common.hpp  drop.hpp  equal.hpp  expression.hpp  filter.hpp  gather.hpp  grade.hpp  iota.hpp  map.hpp  rank.hpp  reduce.hpp  repeat.hpp  reverse.hpp  rotate.hpp  scatter.hpp  size.hpp  take.hpp
src/pipe/: expression.hpp  reverse.cpp  reverse.hpp  size.cpp  size.hpp
src/pipeline/: README.md  all.hpp  any.hpp  catenate.hpp  drop.hpp  filter.hpp  gather.hpp  grade.hpp  iota.hpp  map.hpp  none.hpp  rank.hpp  reduce.hpp  repeat.hpp  reverse.hpp  rotate.hpp  scatter.hpp  size.hpp  take.hpp
src/simple/: all.hpp  any.hpp  catenate.hpp  drop.hpp  filter.hpp  gather.hpp  grade.hpp  iota.hpp  map.hpp  none.hpp  rank.hpp  reduce.hpp  repeat.hpp  reverse.hpp  rotate.hpp  scatter.hpp  shuffle.hpp  size.hpp  take.hpp  zip.hpp
test/: test_all.cpp  test_any.cpp  test_arithmetic.cpp  test_catenate.cpp  test_drop.cpp  test_equal.cpp  test_filter.cpp  test_functional.cpp  test_gather.cpp  test_grade.cpp  test_iota.cpp  test_map.cpp  test_none.cpp  test_rank.cpp  test_reduce.cpp  test_repeat.cpp  test_reverse.cpp  test_rotate.cpp  test_scatter.cpp  test_shuffle.cpp  test_size.cpp  test_take.cpp  test_xpr_pipe.cpp  test_zip.cpp  unit_testing.cpp
test/meta/: test_result.cpp  test_result_factory.cpp
test/naive/: test_arithmetic.cpp  test_catenate.cpp  test_drop.cpp  test_equal.cpp  test_filter.cpp  test_gather.cpp  test_grade.cpp  test_iota.cpp  test_map.cpp  test_rank.cpp  test_reduce.cpp  test_repeat.cpp  test_reverse.cpp  test_rotate.cpp  test_scatter.cpp  test_size.cpp  test_take.cpp  test_xpr_pipe.cpp
test/pipe/: test_piping.cpp  test_reverse.cpp  test_size.cpp
test/pipeline/: test_all.cpp  test_any.cpp  test_catenate.cpp  test_drop.cpp  test_filter.cpp  test_gather.cpp  test_grade.cpp  test_iota.cpp  test_map.cpp  test_none.cpp  test_rank.cpp  test_reduce.cpp  test_repeat.cpp  test_reverse.cpp  test_rotate.cpp  test_scatter.cpp  test_size.cpp  test_take.cpp  test_xpr_pipe.cpp
test/simple/: test_all.cpp  test_any.cpp  test_catenate.cpp  test_drop.cpp  test_filter.cpp  test_gather.cpp  test_grade.cpp  test_iota.cpp  test_map.cpp  test_none.cpp  test_rank.cpp  test_reduce.cpp  test_repeat.cpp  test_reverse.cpp  test_rotate.cpp  test_scatter.cpp  test_shuffle.cpp  test_size.cpp  test_take.cpp  test_zip.cpp
